@@ -68,6 +68,9 @@ Version 1.3-svn:
    * removed manpages (outdated): Hungarian.
  * other:
    * --validcache runtime switch to force assumption that cache is valid
+ * Python AI
+   * Added various input validations
+   * Set Python errors upon error
 
 Version 1.1.7:
  * campaigns
